🐛 resolve <code /> text legibility (#20)

--- a/src/styles/components/_codeSnippet.scss
+++ b/src/styles/components/_codeSnippet.scss
@@ -14,9 +14,11 @@
     width: 100%;
     @include mobile-view {
       padding-top: 40px !important;
+      font-size: 11px !important;
     }
     @include desktop-view {
       padding-top: 30px !important;
+      font-size: 12px !important;
     }
   }
 
@@ -24,7 +26,6 @@
     @include mobile-view {
       padding-right: 30px !important;
       float: left;
-      font-size: 12px !important;
     }
   }
 
